--- a/views/partials/Resume.jade
+++ b/views/partials/Resume.jade
@@ -6,7 +6,7 @@ include DocumentButtons
 
 .row
     .span12
-        .document.readtext.documentshadow
+        .document.documentshadow
 
             .docH3(ng-switch on="editMode")
                 div(ng-switch-when="true")
