--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,47 +4,19 @@ a:hover{
     text-decoration:none;
 }
 
-
-.menu {
-  list-style: none;
-  margin-left: 0px;
-  margin: 2em;
-}
-
-.menu > li {
-    display: inline;
-}
-
-.menubutton {
-    color: #fff;
-    padding: 1em 2em;
-    background-color: #023A61;
-    border-top-color: #023A61;
-    border-left-color: #023A61;
-    border-right-color: #023A61;
-    border-bottom-color: #275474;
-
-}
-.menubutton:hover {
-    background-color: #0A64A4;
-    color: white;
-    text-decoration:none;
-}
-
-.active {
-    background-color: #0A64A4;
-    -webkit-box-shadow: 0 4px 8px -3px #999CA0;
-    -moz-box-shadow:    0 4px 8px -3px #999CA0;
-    box-shadow:         0 4px 8px -3px #999CA0;
-}
-
 .hero-unit{
     color: #ffffff;
-    background-color: #58A9E3;
+    background: #58A9E3;
     border-radius: 0;
-    margin-bottom: 0em;
-    padding: 35px;
+
+
+  }
+
+body{
+    padding-top:40px;
+    padding-bottom: 40px;
 }
+
 
 .picture{
     -webkit-box-sizing: border-box;
@@ -58,22 +30,6 @@ a:hover{
     border-width: 4px;
     border-style: solid;
 }
-
-.well {
-    min-height: 20px;
-    padding: 19px;
-    margin-bottom: 20px;
-    background-color: #ffffff;
-    border: 1px solid #77818B;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-}
-
-
 
 .SectionTitle{
     border-top: solid 1px black;
@@ -91,19 +47,15 @@ a:hover{
     margin-top: 1em;
 }
 
-.readtext{
-    max-width: 48em;
-    margin-left: auto;
-    margin-right: auto  ;
-    /*color: #2B2D30;*/
-}
-
 .document {
     min-height: 20px;
     padding: 19px;
     margin-bottom: 20px;
     background-color: #ffffff;
     border: 1px solid #bbbbbb;
+    max-width: 48em;
+    margin-left: auto;
+    margin-right: auto  ;
 }
 
 .documentshadow {
@@ -127,47 +79,6 @@ blockquote{margin-top: 1em;}
 .divider{
     border-bottom: 0.1em solid #77818B;
     margin-bottom: 1.5em;
-}
-
-ul,
-ol {
-    padding: 0;
-    margin: 0;
-}
-
-
-html,
-body {
-    height: 100%;
-   /*The html and body elements cannot have any padding or margin.*/
-}
-
-/* Wrapper for page content to push down footer */
-#wrap {
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    /* Negative indent footer by it's height */
-    margin: 0 auto -30px;
-}
-
-/* Set the fixed height of the footer here */
-#push,
-#footer {
-    height: 30px;
-}
-#footer {
-    background-color: #f5f5f5;
-}
-
-/* Lastly, apply responsive CSS fixes as necessary */
-@media (max-width: 767px) {
-    #footer {
-        margin-left: -20px;
-        margin-right: -20px;
-        padding-left: 20px;
-        padding-right: 20px;
-    }
 }
 
 
@@ -220,3 +131,4 @@ textarea{
     background: #ddedf9;
     color: inherit;
 }
+
