--- a/views/partials/NavBarBottom.jade
+++ b/views/partials/NavBarBottom.jade
@@ -1,15 +1,17 @@
 //
    Created by MLovan
-   Date: 5/8/13
-   Time: 7:14 PM
+   Date: 5/15/13
+   Time: 10:57 PM
 
-.navbar.navbar-fixed-top(ng-controller="navigationCtrl")
+.navbar.navbar-fixed-bottom(ng-controller="navigationCtrl")
     .navbar-inner
         .container
-            ul.nav
+            ul.nav.pull-right
                 li(ng-class="{active: location.path() == '/bio'}")
                     a(href='bio') Bio
                 li(ng-class="{active: location.path() == '/projects'}")
                     a(href='projects') Projects
                 li(ng-class="{active: location.path() == '/resume'}")
                     a(href='resume') Resume
+
+
