--- a/views/partials/DocumentButtons.jade
+++ b/views/partials/DocumentButtons.jade
@@ -19,9 +19,9 @@
                     button.btn.btn-primary(ng-click="editMode= true")
                         i.icon-wrench.icon-white
                         |  Edit
-                li(ng-hide="editMode")
-                    a.btn.btn-primary(href='javascript:window.print()')
-                        i.icon-print.icon-white
-                        |  Print
+                //li(ng-hide="editMode")
+                //    a.btn.btn-primary(href='javascript:window.print()')
+                //        i.icon-print.icon-white
+                //        |  Print
                 //li
                 //    a.btn.bottomshadow(href='#Save') Save as PDF
