cleanup, comment out

--- a/views/partials/Header.jade
+++ b/views/partials/Header.jade
@@ -16,10 +16,10 @@
                 ul.unstyled.text-center
                     li
                         a(href="http://twitter.com/mattlovan")
-                            img(src="img/twitter-bird-dark-bgs.png" , alt="twitter logo", height="40px", width="40px")
+                            img(src="img/twitter-bird-dark-bgs.png", target="_blank" , alt="twitter logo", height="40px", width="40px")
 
                     li
                         a(href="https://www.facebook.com/matt.lovan.1")
-                            img(src="img/FB-f-Logo__white_29.png" , alt="facebook logo")
+                            img(src="img/FB-f-Logo__white_29.png", target="_blank", alt="facebook logo")
 
 
