--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,6 @@ block body
 
     include partials/Header
 
-
     .container
         div(ng-view)
 
@@ -17,7 +16,7 @@ block body
     script(src='js/lib/bootstrap.js')
     script(src='js/lib/angular/angular.js')
     script(src='js/app.js')
-    script(src='js/services.js')
     script(src='js/controllers.js')
-    script(src='js/filters.js')
     script(src='js/directives.js')
+    //script(src='js/services.js')
+    //script(src='js/filters.js')
